<resources>
    <string name="app_name">Saper</string>
    <string name="records">Wyniki</string>
    <string name="settings">Ustawienia</string>

    <string name="game_all">Wszystkie</string>
    <string name="game_8x8">8x8</string>
    <string name="game_16x16">16x16</string>
    <string name="game_30x16">30x16</string>
    <string name="game_custom">Własne ustawienia</string>

    <string-array name="filter">
        <item>Wszystkie</item>
        <item>8x8</item>
        <item>16x16</item>
        <item>30x16</item>
        <item>Własne ustawienia</item>
    </string-array>

    <string name="input_width">Szerokość</string>
    <string name="input_height">Wysokość</string>
    <string name="input_mines">Ilość min</string>

    <string name="button_new_game">Zacznij</string>

    <string name="left_mines">Miny: %1$d</string>
    <string name="time">Czas: %1$ds</string>

    <string name="win">Wygrana w czasie: %1$ds</string>
    <string name="new_game">Nowa gra</string>
    <string name="lose">Przegrana</string>
    <string name="ok">OK</string>

    <string name="record_number">%1$d.</string>
    <string name="record_time">%1$ds</string>

    <string name="api_error">Błąd: %1$d</string>
    <string name="api_error2">Błąd połączenia</string>

    <string name="avatar">Avatar</string>
    <string name="spinner_title">Plansza</string>

    <string name="title_activity_login">Logowanie</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Email lub login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
    <string name="action_register">Zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Niepoprawny email</string>
    <string name="error_invalid_password">Za krótkie hasło</string>
    <string name="error_incorrect_password">Niepoprawne hasło</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Uprawnienie odczytu kontaktów jest wymagane do autouzupełniania emaila."</string>
    <!--"Contacts permissions are needed for providing email completions."-->

    <string name="input_required">To pole jest wymagane</string>
    <string name="login_success">Zalogowano</string>

</resources>
