<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/game_all"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>
    <item
        android:title="@string/game_8x8"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>
    <item
        android:title="@string/game_16x16"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>
    <item
        android:title="@string/game_30x16"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>
    <item
        android:title="@string/game_custom"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always"/>

</menu>