<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bolek.minesweeper_android.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_records"
        android:orderInCategory="100"
        android:title="@string/records"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/title_activity_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login2"
        android:orderInCategory="100"
        android:title="logowanie 2"
        app:showAsAction="never" />
</menu>
